rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__proj_advanced__test_proj_advanced__alter_name.snap
---
source: crates/proj/src/functions/iso19111/proj_advanced.rs
expression: wkt
---
GEOGCRS["new name",
    DATUM["World Geodetic System 1984",
        ELLIPSOID["WGS84",6378137,298.257223563,
            LENGTHUNIT["metre",1,
                ID["EPSG",9001]]]],
    PRIMEM["Greenwich",1,
        ANGLEUNIT["degree",0.0174532925199433,
            ID["EPSG",9122]]],
    CS[ellipsoidal,2],
        AXIS["latitude",north,
            ORDER[1],
            ANGLEUNIT["degree",0.0174532925199433,
                ID["EPSG",9122]]],
        AXIS["longitude",east,
            ORDER[2],
            ANGLEUNIT["degree",0.0174532925199433,
                ID["EPSG",9122]]]]
